# go-project-cli

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test_main.py
go_project_cli/: main.py  utils.py
go_project_cli/examples/: example.py
project_cli/: main.py  utils.py
projectcli/: main.py  utils.py
projectcli/examples/: example
tests/: test_main.py
