[tool.poetry]
name = "go-project-cli"
version = "0.3.0"
description = ""
authors = ["sangjinsu <climbplant39@kakao.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.scripts]
projectcli = "go_project_cli.main:app"


[tool.poetry.dependencies]
python = "^3.9"
typer = { extras = ["all"], version = "^0.9.0" }

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
